Revert "Revert "navbar-fixed-bottom --> z-index=1""
This reverts commit ca624ed

--- a/src/main/webapp/htdocs/css/main/index.debug.css
+++ b/src/main/webapp/htdocs/css/main/index.debug.css
@@ -790,7 +790,6 @@ body {
     margin-left: 200px;
 }
 
-
 .hbox {
     display: table;
     width: 100%;
@@ -5773,6 +5772,10 @@ a.text-#000000:hover {
     100% {
         background-color: #675e55;
     }
+}
+
+.navbar-fixed-bottom {
+    z-index: 1 !important;
 }
 
 
